managed/apps/aa/components/api/overlays/dev/patches/deploy-api-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-api
  namespace: aa
spec:
  template:
    spec:
      containers:
        - name: api
          image: gcr.io/tf-ops-cicd-97aadd/aa/api/dev/api:latest
