managed/apps/aa/components/api/overlays/dev/patches/ingress-api.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api
  namespace: aa
spec:
  tls:
  - hosts:
    - api.dev.addressaustralia.american-broomstick.com
    secretName: api-tls
  rules:
  - host: api.dev.addressaustralia.american-broomstick.com
    http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api-api-api
              port:
                number: 8080
